--- a/src/scripts/data/assets/sc4evermore/6-network-addon-mod-nam.yaml
+++ b/src/scripts/data/assets/sc4evermore/6-network-addon-mod-nam.yaml
@@ -16,7 +16,7 @@ assets:
     category: 6-network-addon-mod-nam
     dependencies: []
     downloads: 10030
-    filename: NetworkAddonMod_Setup_Version48.zip
+    file: NetworkAddonMod_Setup_Version48.zip
     files:
       - sc4nam.com - NAM Documentation.url
       - read-first-nam-48.html
@@ -1003,7 +1003,7 @@ assets:
     category: 6-network-addon-mod-nam
     dependencies: []
     downloads: 1442
-    filename: NetworkAddonMod_Lite_Setup_Version3.zip
+    file: NetworkAddonMod_Lite_Setup_Version3.zip
     files:
       - sc4nam.com - NAM Documentation.url
       - read-first-nam-lite.html
